--- a/css/style.css
+++ b/css/style.css
@@ -594,3 +594,10 @@
         width: min(150px, 100%) !important;
     }
 }
+
+.img-square {
+    width: 25%; 
+    height: auto; 
+    aspect-ratio: 1/1; 
+    object-fit: contain; 
+}
